project/test/semantics/bad/input/Bad38_shouldThrowConstructorArgumentListInvalidError.ty
mutable class TestClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
        var3: String;
        var4: Bool;
    }
    
    functions: {
        goodFunction: () -> Int = 50
    }
    
    actions: {
        goodAction: (x: Int, y: String) -> Int = {
            val z: Int = 4;
            z
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = {
            val testClass: TestClass = TestClass(3, "OK", 4 * 4, False);
            // ConstructorArgumentListInvalidError: wrong type order
        }
    }
}
